// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots QuestionChoices QCM 1`] = `
<View
  testID="question-choices"
>
  <View>
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#FFFFFF",
              "borderColor": "rgba(0, 0, 0, 0.1)",
              "borderRadius": 3,
              "borderStyle": "solid",
              "borderWidth": 1,
              "overflow": "hidden",
            },
            false,
            Object {
              "flexGrow": 1,
            },
          ]
        }
        testID="question-choice-1"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#14171A",
                "fontSize": 17,
                "fontWeight": "700",
                "justifyContent": "flex-start",
                "paddingHorizontal": 24,
                "paddingVertical": 16,
              },
              false,
            ]
          }
        >
          Play Store
        </Text>
      </View>
    </View>
  </View>
  <View>
    <View
      style={
        Object {
          "height": 8,
          "width": 8,
        }
      }
    />
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#FFFFFF",
              "borderColor": "rgba(0, 0, 0, 0.1)",
              "borderRadius": 3,
              "borderStyle": "solid",
              "borderWidth": 1,
              "overflow": "hidden",
            },
            false,
            Object {
              "flexGrow": 1,
            },
          ]
        }
        testID="question-choice-2"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#14171A",
                "fontSize": 17,
                "fontWeight": "700",
                "justifyContent": "flex-start",
                "paddingHorizontal": 24,
                "paddingVertical": 16,
              },
              false,
            ]
          }
        >
          App Store
        </Text>
      </View>
    </View>
  </View>
  <View>
    <View
      style={
        Object {
          "height": 8,
          "width": 8,
        }
      }
    />
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#FFFFFF",
              "borderColor": "rgba(0, 0, 0, 0.1)",
              "borderRadius": 3,
              "borderStyle": "solid",
              "borderWidth": 1,
              "overflow": "hidden",
            },
            false,
            Object {
              "flexGrow": 1,
            },
          ]
        }
        testID="question-choice-3"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#14171A",
                "fontSize": 17,
                "fontWeight": "700",
                "justifyContent": "flex-start",
                "paddingHorizontal": 24,
                "paddingVertical": 16,
              },
              false,
            ]
          }
        >
          Apple Store
        </Text>
      </View>
    </View>
  </View>
  <View>
    <View
      style={
        Object {
          "height": 8,
          "width": 8,
        }
      }
    />
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#FFFFFF",
              "borderColor": "rgba(0, 0, 0, 0.1)",
              "borderRadius": 3,
              "borderStyle": "solid",
              "borderWidth": 1,
              "overflow": "hidden",
            },
            false,
            Object {
              "flexGrow": 1,
            },
          ]
        }
        testID="question-choice-4"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#14171A",
                "fontSize": 17,
                "fontWeight": "700",
                "justifyContent": "flex-start",
                "paddingHorizontal": 24,
                "paddingVertical": 16,
              },
              false,
            ]
          }
        >
          Pineapple Store
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots QuestionChoices QCM Graphic 1`] = `
<View
  testID="question-choices"
>
  <View>
    <View
      style={
        Object {
          "alignItems": "stretch",
          "flexDirection": "row",
        }
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "flex": 1,
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#FFFFFF",
                "borderColor": "rgba(0, 0, 0, 0.1)",
                "borderRadius": 3,
                "borderStyle": "solid",
                "borderWidth": 1,
                "overflow": "hidden",
              },
              false,
              Object {
                "flexGrow": 1,
              },
            ]
          }
          testID="question-choice-1"
        >
          <View
            style={
              Object {
                "borderTopLeftRadius": 3,
                "borderTopRightRadius": 3,
                "height": 120,
                "width": "100%",
              }
            }
          >
            <Image
              source={
                Object {
                  "testUri": "../../../src/__fixtures__/image-landscape-1.jpg",
                }
              }
              style={
                Array [
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  },
                  Object {
                    "height": 120,
                    "width": "100%",
                  },
                  undefined,
                ]
              }
              testID="question-choice-1-image"
            />
          </View>
          <Text
            style={
              Array [
                Object {
                  "color": "#14171A",
                  "fontSize": 17,
                  "fontWeight": "700",
                  "justifyContent": "flex-start",
                  "paddingHorizontal": 24,
                  "paddingVertical": 16,
                },
                false,
              ]
            }
          >
            Play Store
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "height": 8,
            "width": 8,
          }
        }
      />
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "flex": 1,
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#FFFFFF",
                "borderColor": "rgba(0, 0, 0, 0.1)",
                "borderRadius": 3,
                "borderStyle": "solid",
                "borderWidth": 1,
                "overflow": "hidden",
              },
              false,
              Object {
                "flexGrow": 1,
              },
            ]
          }
          testID="question-choice-2"
        >
          <View
            style={
              Object {
                "borderTopLeftRadius": 3,
                "borderTopRightRadius": 3,
                "height": 120,
                "width": "100%",
              }
            }
          >
            <Image
              source={
                Object {
                  "testUri": "../../../src/__fixtures__/image-portrait-1.jpg",
                }
              }
              style={
                Array [
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  },
                  Object {
                    "height": 120,
                    "width": "100%",
                  },
                  undefined,
                ]
              }
              testID="question-choice-2-image"
            />
          </View>
          <Text
            style={
              Array [
                Object {
                  "color": "#14171A",
                  "fontSize": 17,
                  "fontWeight": "700",
                  "justifyContent": "flex-start",
                  "paddingHorizontal": 24,
                  "paddingVertical": 16,
                },
                false,
              ]
            }
          >
            App Store with a portrait image
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View>
    <View
      style={
        Object {
          "height": 8,
          "width": 8,
        }
      }
    />
    <View
      style={
        Object {
          "alignItems": "stretch",
          "flexDirection": "row",
        }
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "flex": 1,
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#FFFFFF",
                "borderColor": "rgba(0, 0, 0, 0.1)",
                "borderRadius": 3,
                "borderStyle": "solid",
                "borderWidth": 1,
                "overflow": "hidden",
              },
              false,
              Object {
                "flexGrow": 1,
              },
            ]
          }
          testID="question-choice-3"
        >
          <View
            style={
              Object {
                "borderTopLeftRadius": 3,
                "borderTopRightRadius": 3,
                "height": 120,
                "width": "100%",
              }
            }
          >
            <Image
              source={
                Object {
                  "testUri": "../../../src/__fixtures__/image-landscape-1.jpg",
                }
              }
              style={
                Array [
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  },
                  Object {
                    "height": 120,
                    "width": "100%",
                  },
                  undefined,
                ]
              }
              testID="question-choice-3-image"
            />
          </View>
          <Text
            style={
              Array [
                Object {
                  "color": "#14171A",
                  "fontSize": 17,
                  "fontWeight": "700",
                  "justifyContent": "flex-start",
                  "paddingHorizontal": 24,
                  "paddingVertical": 16,
                },
                false,
              ]
            }
          >
            Apple Store
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "height": 8,
            "width": 8,
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      />
    </View>
  </View>
</View>
`;
